feat: establish initial KDP Converter FX application structure, including core services, models, and UI.